backend/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k6-backend
  namespace: k6
spec:
  selector:
    app: k6-backend
  ports:
    - port: 80
      targetPort: 5001
  type: NodePort
