backend/k8s/k6-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k6-ingress
  namespace: k6
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          # FRONTEND
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k6-frontend
                port:
                  number: 80

          # BACKEND API
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: k6-backend
                port:
                  number: 5001
